# github-monitor

./: .gitignore  main.py  pyproject.toml  util.py
db/: data.db  db.py
