[tool.poetry]
name = "github "
version = "0.1.0"
description = ""
authors = ["chrisyy <1017975501@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
apscheduler = "^3.10.1"
requests = "^2.28.2"
peewee = "^3.16.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
